# drop-sql

./: README.md  drop-table.cabal  install-bin.sh
src/: Main.hs
